# Multi-Agent-Github-Repo-Analysis-Tool

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  MAINTENANCE_REPORT.md  MIGRATION_GUIDE.md  README.md  docker-compose.yml  install.ps1  install.sh  main.py  pyproject.toml  requirements-updated.txt  requirements.txt  setup.py
src/: __init__.py  agents.py  config.py  report.py  tools.py  workflow.py
